--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart" : "npm install",
+    "prestart": "npm install",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -12,7 +12,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
+    "sequelize": "^3.24.3",
+    "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
   }
 }
