--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
     "sequelize": "^3.24.3",
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
