--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "mongodb": "^2.2.10",
+    "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
     "sequelize": "^3.24.3",
